fix text alignment add missing translation

--- a/bigday/static/bigday/css/creative.css
+++ b/bigday/static/bigday/css/creative.css
@@ -46,7 +46,7 @@ p {
     font-size: 16px;
 }
 
-.text-content {
+.text-content, .text-content p {
     text-align: center;
     letter-spacing: 0.7px;
     font-size: 18px;
@@ -272,8 +272,12 @@ body {
     padding-top: 25px;
 }
 
-.info-container {
+.info-container p, .info-container ul li {
     padding-right: 10%;
+    text-align: justify;
+    letter-spacing: 0.7px;
+    font-size: 18px;
+    line-height: 1.3;
 }
 
 @media screen and (orientation:portrait) {
@@ -283,6 +287,8 @@ body {
     }
 
     .info-container {
+        padding-top: 5%;
+        padding-left: 5%;
         padding-right: 0%;
         padding-bottom: 25px;
     }
